# datacl

./: .gitignore  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
approxalgos/ApproxFrequent/: Makefile.am  Makefile.in
approxalgos/ApproxQuantile/: Makefile.am  Makefile.in
approxalgos/ApproxUnique/: Makefile.am  Makefile.in
approxalgos/GPU_Work_Final2/bussAnal/filter/: Makefile.am  Makefile.in
approxalgos/GPU_Work_Final2/bussAnal/tar/filter_gpu/: Makefile.am  Makefile.in
approxalgos/GPU_Work_Final2/bussAnal/tar/filter_gpu/backup/: Makefile.am  Makefile.in
approxalgos/GPU_Work_Final2/dataScience/QGPU/: Makefile.am  Makefile.in
approxalgos/GPU_Work_Final2/dataScience/QGPU/unit_tests/datagen/: Makefile.am  Makefile.in
q-base/: Makefile.am  Makefile.in
q-base/gpu/: Makefile.am  Makefile.in
q-base/latex/: Makefile.in
q-base/src/: Makefile.am  Makefile.in  q_core.c
qtils/: Makefile.in
qtils/src/: Makefile.am  Makefile.in  q.c  qtypes.h
qtils/src/AUX/: qsort_asc_I4.c  qsort_asc_I4.h  qsort_asc_I8.c  qsort_asc_val_I4_idx_I4.c  qsort_asc_val_I4_idx_I4.h  qsort_asc_val_I4_idx_I8.c  qsort_asc_val_I8_idx_I4.c  qsort_asc_val_I8_idx_I8.c  qsort_dsc_I4.c  qsort_dsc_I8.c  qsort_dsc_val_I4_idx_I4.c  qsort_dsc_val_I4_idx_I8.c  qsort_dsc_val_I8_idx_I4.c  qsort_dsc_val_I8_idx_I8.c  qsort_with_idx_int.c  qsort_with_idx_longlong.c
qtils/src/dir_helpers/: ext_f_to_s.c  par_f_to_s.c  vec_f1s1opf2.c
qtils/src/dir_wr_verbs/: f1f2_to_s.c
src/: Makefile.am  Makefile.in  q.c  qtypes.h
src/AUX/: qsort_asc_I4.c  qsort_asc_I8.c  qsort_asc_val_I4_idx_I4.c  qsort_asc_val_I4_idx_I8.c  qsort_asc_val_I8_idx_I4.c  qsort_asc_val_I8_idx_I8.c  qsort_dsc_I4.c  qsort_dsc_I8.c  qsort_dsc_val_I4_idx_I4.c  qsort_dsc_val_I4_idx_I8.c  qsort_dsc_val_I8_idx_I4.c  qsort_dsc_val_I8_idx_I8.c  qsort_with_idx_int.c  qsort_with_idx_longlong.c
src/dir_helpers/: ext_f_to_s.c  par_f_to_s.c  vec_f1s1opf2.c
src/dir_wr_verbs/: f1f2_to_s.c  stride.c
